Font and alignment fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-
 a {
     color: #08c;
     text-decoration: none;
@@ -47,8 +46,9 @@ a:hover {
     border-radius: 5px;
     border: 1px solid #707070;
     color: white;
-    font: 12px "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
-    
+    font: 12px;
+    /*font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;*/
+    font-family: Helvetica, Arial, Verdana, sans-serif;
 }
 
 #header-selection {
@@ -132,7 +132,8 @@ a:hover {
     display: inline-block;
     color: white;
     max-width: 788px;
-    font: 18px "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
+    font: 18px;
+    font-family: "Roboto", Helvetica, Arial, Verdana, sans-serif;
 }
 
 .title {
@@ -164,13 +165,19 @@ a:hover {
 }
 
 .footer {
-    font: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
+    font-family: Helvetica, Arial, Verdana, sans-serif;
     color: #6e6e6e;
     font-size: .72em;
     line-height: 1.2;
     text-align: right;
-    max-width: 1000px;
+    max-width: 1150px;
     margin: auto;
+}
+
+@media screen and (max-width: 1000px) {
+    .footer {
+        font-size: .65em;
+    }
 }
 
 .left {
